<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:title="@string/map">
            <menu>
                <item
                    android:id="@+id/nav_show_legend"
                    android:icon="@drawable/legend"
                    android:title="@string/show_legend"/>
                <item
                    android:id="@+id/nav_map_download"
                    android:icon="@drawable/download"
                    android:title="@string/download_map"/>
                <item
                    android:id="@+id/nav_map_cleanup"
                    android:icon="@drawable/delete"
                    android:title="@string/cleanup_map"/>
                <item
                    android:id="@+id/nav_sync_google_bookmarks"
                    android:icon="@drawable/sync"
                    android:title="@string/synchronize_google_maps_bookmarks"/>
            </menu>
        </item>

        <item
            android:title="@string/routes">
            <menu>
                <item
                    android:id="@+id/nav_add_tracks_as_routes"
                    android:icon="@drawable/add"
                    android:title="@string/add_tracks_as_routes"/>
                <item
                    android:id="@+id/nav_remove_routes"
                    android:icon="@drawable/remove"
                    android:title="@string/remove_routes"/>
                <item
                    android:id="@+id/nav_export_selected_route"
                    android:icon="@drawable/file"
                    android:title="@string/export_selected_route"/>
                <item
                    android:id="@+id/nav_show_brouter"
                    android:icon="@drawable/brouter"
                    android:title="@string/brouter"/>
            </menu>
        </item>

        <item
            android:title="@string/general">
            <menu>
                <item
                    android:id="@+id/nav_show_help"
                    android:icon="@drawable/help"
                    android:title="@string/help"/>
                <item
                    android:id="@+id/nav_preferences"
                    android:icon="@drawable/prefs"
                    android:title="@string/preferences"/>
                <item
                    android:id="@+id/nav_restart"
                    android:icon="@drawable/restart"
                    android:title="@string/restart"/>
                <item
                    android:id="@+id/nav_exit"
                    android:icon="@drawable/exit"
                    android:title="@string/exit"/>
            </menu>
        </item>

        <item
            android:title="@string/debug">
            <menu>
                <item
                    android:id="@+id/nav_toggle_messages"
                    android:icon="@drawable/messages"
                    android:title="@string/toggle_messages"/>
                <item
                    android:id="@+id/nav_send_logs"
                    android:icon="@drawable/upload"
                    android:title="@string/send_logs"/>
                <item
                    android:id="@+id/nav_reset"
                    android:icon="@drawable/reset"
                    android:title="@string/reset"/>
            </menu>
        </item>

    </group>

</menu>
