<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
	  android:layout_height="64dp"
	  android:background="#333">

    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/navigation_drawer_header_background_description"
        android:src="@drawable/nav_header" />
    
	  <ImageView
		    android:id="@+id/nav_drawer_app_icon"
		    android:layout_width="48dp"
        android:layout_height="match_parent"
		    android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
		    android:src="@drawable/icon"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
        android:gravity="center_vertical"
		    android:contentDescription="@string/navigation_drawer_app_info_icon_description" />
  
	  <LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_toEndOf="@+id/nav_drawer_app_icon"
		    android:layout_toRightOf="@+id/nav_drawer_app_icon"
		    android:orientation="vertical">
		   
		    <TextView 
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:gravity="start"
			      android:textSize="20sp"
			      android:text="@string/app_name"
			      android:textStyle="bold"/>
		   
			  <TextView 
			      android:id="@+id/nav_drawer_app_version"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:gravity="start"
			      android:textSize="16sp" />
		      
	  </LinearLayout>
  
</RelativeLayout>
